# Swiff

./: .gitignore  CMakeLists.txt  TODO  resources.qrc  resources.rc
setup/: Swiff.sf8
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  LicenseWindow.cpp  LicenseWindow.h  LicenseWindow.ui  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreviewWidget.cpp  PreviewWidget.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SwiffABCData.cpp  SwiffABCData.h  SwiffAction.cpp  SwiffAction.h  SwiffActionScriptDecompiler.cpp  SwiffActionScriptDecompiler.h  SwiffActionScriptEngine.cpp  SwiffActionScriptEngine.h  SwiffBitStream.cpp  SwiffBitStream.h  SwiffBitmap.cpp  SwiffBitmap.h  SwiffButton.cpp  SwiffButton.h  SwiffClipActionRecord.h  SwiffClipEventFlags.h  SwiffCxForm.h  SwiffDoABC.cpp  SwiffDoABC.h  SwiffDocument.cpp  SwiffDocument.h  SwiffEdge.cpp  SwiffEdge.h  SwiffExporter.cpp  SwiffExporter.h  (+40 more)
